--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -48,7 +48,7 @@
     min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,255,0.15);
+    background: rgba(255,255,255,0.15);
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -168,7 +168,7 @@
 <div class="prospect-page">
 
   <!-- ============================= -->
-  <!-- HERO / HEADER -->
+  <!-- HERO (IDENTICAL STRUCTURE) -->
   <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
@@ -186,7 +186,7 @@
   </section>
 
   <!-- ============================= -->
-  <!-- META COLUMNS -->
+  <!-- META (IDENTICAL STRUCTURE) -->
   <!-- ============================= -->
   <section class="prospect-meta">
     <div class="meta-column">
@@ -206,9 +206,9 @@
       <ul class="meta-list">
         <li><span class="meta-key">Fall Rank</span><span class="meta-value">4 / 63</span></li>
         <li><span class="meta-key">GPA</span><span class="meta-value">3.5</span></li>
-        <li><span class="meta-key">Captain</span><span class="meta-value">Captain contention · long-term locker room leader</span></li>
+        <li><span class="meta-key">Captain</span><span class="meta-value">Captain contention · locker room leader trajectory</span></li>
         <li><span class="meta-key">Personality</span><span class="meta-value">9. Player-Coach</span></li>
-        <li><span class="meta-key">Performance</span><span class="meta-value">Top-5 Diamond League finisher · consistently strong scrimmage + assignment execution</span></li>
+        <li><span class="meta-key">Performance</span><span class="meta-value">Top-5 performer · strong scrimmage + assignment execution</span></li>
       </ul>
     </div>
   </section>
@@ -220,15 +220,15 @@
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
       A flagship Player-Coach archetype and one of the highest-floor prospects in the Diamond League class,
-      Catherine represents the exact cultural wiring elite banking teams bet on early: honor, discipline,
+      Catherine represents the precise cultural wiring elite banking teams bet on early: honor, discipline,
       respect, and a deep sense of responsibility to her team and standards. A top-5 finisher in a highly
       competitive 63-athlete cohort, she consistently models maturity beyond her years — always prepared,
       thoughtful, and operating with a “raise the floor” mentality that strengthens every group she joins.
       <br><br>
       Her rowing résumé — Henley Royal Regatta champion, Youth Nationals medalist, and long-tenured varsity leader —
-      reflects years of high-pressure athletic experience and near-captain status. Combine that with private equity
-      exposure, an IB externship, and advanced valuation reps from MAP and Training the Street, and Catherine profiles
-      as a polished early recruit who brings both intellectual and cultural value to a deal team from day one.
+      reflects years of high-pressure athletic success. Combine that with private equity exposure, IB externship
+      experience, and technical training through MAP + TTS, and Catherine profiles as a polished early recruit who
+      brings both intellectual and cultural value to a deal team from day one.
     </p>
   </section>
 
@@ -238,12 +238,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Player-Coach leadership:</strong> Upholds discipline, culture, and example-setting; aspires to be the standard-bearer teammates look to for inspiration.</li>
-      <li><strong>Elite competitive pedigree:</strong> Henley Royal Regatta winner, Youth Nationals medalist, and 1V 8+ standout — comfortable competing on global stages.</li>
-      <li><strong>Composed, intentional communicator:</strong> Uses deliberate pause-plays and structured delivery to select the most relevant examples and answer with clarity.</li>
-      <li><strong>Early financial experience:</strong> Private equity internship at SFW Capital Partners and IB externship at KeyBanc, with exposure to sector research, target profiling, and deal materials.</li>
-      <li><strong>Top-5 MAP performer:</strong> Fall rank of 4 / 63 signals strong execution across MAP’s Diamond League curriculum and C&amp;R case work with Guggenheim.</li>
-      <li><strong>Community and service leadership:</strong> Deep involvement in organizations like Coffee for Good, the Barat Foundation, and the First Selectman’s Youth Commission highlights empathy, integrity, and long-term commitment.</li>
+      <li><strong>Player-Coach leadership:</strong> Upholds culture, discipline, and respect — teammates track her standards and follow her lead.</li>
+      <li><strong>Elite rowing pedigree:</strong> Henley Royal Regatta winner, Youth Nationals medalist, and 1V 8+ standout; proven under global pressure.</li>
+      <li><strong>Intentional communicator:</strong> Uses pause-plays to select the most relevant example; answers with clarity and structure.</li>
+      <li><strong>Finance experience:</strong> Private equity internship + IB externship + sector thesis building + valuation exposure.</li>
+      <li><strong>MAP standout:</strong> Ranked 4 / 63 — consistent, high-quality execution across Diamond League C&R case work.</li>
+      <li><strong>Service-driven leader:</strong> Barat Foundation president + Coffee for Good + FSYC show long-term commitment to community impact.</li>
     </ul>
   </section>
 
@@ -253,9 +253,9 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue translating rich athletic and leadership experiences into tighter, punchier interview narratives that land quickly with senior bankers.</li>
-      <li>Lean more aggressively into visible leadership moments in professional settings to match her natural Player-Coach wiring.</li>
-      <li>Further accelerate technical reps — especially financial modeling speed and accounting depth — to solidify Day-1 analyst readiness.</li>
+      <li>Continue tightening interview storytelling to match her depth of experiences.</li>
+      <li>Lean more proactively into vocal leadership moments in professional settings.</li>
+      <li>Further accelerate technical reps (modeling speed, accounting foundations) to solidify Day-1 readiness.</li>
     </ul>
   </section>
 
@@ -265,11 +265,10 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 1–2 MAP prospect with both the pedigree and personality wiring of a future cultural cornerstone on any
-      banking team. Catherine’s rare blend of discipline, values-driven leadership, and early technical exposure creates
-      a high-floor, high-character profile built to thrive in Summer 2027 investment banking recruiting. With continued
-      storytelling refinement and technical reps, she projects as a player who not only meets expectations — but elevates
-      the room and sets the tone for the analyst class around her.
+      Round 1–2 MAP prospect with the pedigree, competitive maturity, and leadership wiring of a future culture-carrier
+      on any banking team. Catherine’s blend of discipline, early financial exposure, and principled leadership gives
+      her a high floor and significant long-term upside. With continued technical reps and storytelling refinement, she
+      projects as a player who not only meets expectations but elevates the room and sets the tone for her analyst class.
     </p>
   </section>
 
