--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -48,7 +48,7 @@
     min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.15); /* FIXED */
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -167,9 +167,6 @@
 
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO (IDENTICAL STRUCTURE) -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">CATHERINE RUF</h1>
@@ -185,9 +182,6 @@
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- META (IDENTICAL STRUCTURE) -->
-  <!-- ============================= -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
@@ -213,9 +207,6 @@
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
@@ -232,44 +223,35 @@
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
       <li><strong>Player-Coach leadership:</strong> Upholds culture, discipline, and respect — teammates track her standards and follow her lead.</li>
       <li><strong>Elite rowing pedigree:</strong> Henley Royal Regatta winner, Youth Nationals medalist, and 1V 8+ standout; proven under global pressure.</li>
-      <li><strong>Intentional communicator:</strong> Uses pause-plays to select the most relevant example; answers with clarity and structure.</li>
-      <li><strong>Finance experience:</strong> Private equity internship + IB externship + sector thesis building + valuation exposure.</li>
-      <li><strong>MAP standout:</strong> Ranked 4 / 63 — consistent, high-quality execution across Diamond League C&R case work.</li>
-      <li><strong>Service-driven leader:</strong> Barat Foundation president + Coffee for Good + FSYC show long-term commitment to community impact.</li>
+      <li><strong>Intentional communicator:</strong> Uses pause-plays to select relevant examples and deliver structured, composed answers.</li>
+      <li><strong>Early finance exposure:</strong> Private equity internship + IB externship + valuation and sector work through MAP.</li>
+      <li><strong>MAP standout:</strong> Ranked 4 / 63 — consistent, high-quality execution across the C&amp;R case.</li>
+      <li><strong>Service-driven leader:</strong> Barat Foundation, Coffee for Good &amp; FSYC signal maturity, empathy, and integrity.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue tightening interview storytelling to match her depth of experiences.</li>
+      <li>Continue refining interview storytelling to match depth of experience.</li>
       <li>Lean more proactively into vocal leadership moments in professional settings.</li>
-      <li>Further accelerate technical reps (modeling speed, accounting foundations) to solidify Day-1 readiness.</li>
+      <li>Accelerate technical reps (modeling speed, accounting depth) to strengthen Day-1 readiness.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 1–2 MAP prospect with the pedigree, competitive maturity, and leadership wiring of a future culture-carrier
-      on any banking team. Catherine’s blend of discipline, early financial exposure, and principled leadership gives
-      her a high floor and significant long-term upside. With continued technical reps and storytelling refinement, she
-      projects as a player who not only meets expectations but elevates the room and sets the tone for her analyst class.
+      Round 1–2 MAP prospect with the pedigree, discipline, and cultural wiring of a future tone-setter on any
+      investment banking team. With continued technical reps and communication refinement, she projects as a
+      high-floor, high-character analyst capable of elevating the entire class around her.
     </p>
   </section>
 
 </div>
+
