--- a/cosmo-fusco.html
+++ b/cosmo-fusco.html
@@ -48,7 +48,7 @@
     min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.15); /* FIXED */
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -237,12 +237,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Point Guard leadership:</strong> Team-first mindset, prioritizes relationships and calm decision-making in high-pressure situations.</li>
-      <li><strong>Elite academic profile:</strong> Economics &amp; Mathematics double major with a 3.85 GPA and a Statistics minor at Penn.</li>
-      <li><strong>Early finance exposure:</strong> Venture capital experience, Wharton finance club case work, and C&amp;R-focused Diamond League reps.</li>
-      <li><strong>Operational management:</strong> Led a team of 17 operations assistants managing housing, conferences, and 8,000+ summer program guests.</li>
-      <li><strong>Communication maturity:</strong> Uses multiple pause-plays, signaling self-awareness and intentional, structured responses in interviews.</li>
-      <li><strong>Leadership development:</strong> Active in leadership programs and student orgs, building a foundation in teamwork, outreach, and professional communication.</li>
+      <li><strong>Point Guard leadership:</strong> Team-first mindset, prioritizes relationships and composure in high-pressure situations.</li>
+      <li><strong>Elite academic profile:</strong> Econ + Math double major, 3.85 GPA, Statistics minor — strong analytical ceiling.</li>
+      <li><strong>Finance exposure:</strong> VC internship, Wharton finance clubs, and Diamond League C&amp;R valuation reps.</li>
+      <li><strong>Operational experience:</strong> Managed 17-person staff + 8,000 summer guests across Penn housing operations.</li>
+      <li><strong>Poised communicator:</strong> Uses multiple pause-plays, signaling maturity and intentional delivery.</li>
+      <li><strong>Leadership development:</strong> Multiple roles demonstrating initiative, outreach, and team coordination.</li>
     </ul>
   </section>
 
@@ -252,9 +252,9 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Strengthen consistency on deadlines and deliverables during intensive case competitions to match his academic ceiling and leadership potential.</li>
-      <li>Continue tightening technical execution — especially three-statement modeling speed and comfort with valuation outputs.</li>
-      <li>Push more vocal ownership in group settings, stepping into the Point Guard role earlier rather than waiting for moments to come to him.</li>
+      <li>Strengthen consistency with deadlines and deliverables during case competitions to match academic upside.</li>
+      <li>Sharpen IB-specific technical skills (three-statement modeling, valuation speed).</li>
+      <li>Lean more proactively into vocal leadership — taking Point Guard ownership earlier in group workflows.</li>
     </ul>
   </section>
 
@@ -264,11 +264,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      High-upside Round 2–3 MAP prospect for Summer 2027 investment banking recruiting. Cosmo’s academic
-      foundation, leadership wiring, and early finance exposure create a strong long-term analyst profile once
-      consistency with deadlines catches up to his talent. With improved time management and continued technical
-      reps, he has the tools to grow into a reliable, steady presence on a deal team who elevates both process and culture.
+      High-upside Round 2–3 MAP prospect for Summer 2027 IB recruiting. Cosmo’s analytical horsepower, 
+      leadership wiring, and diverse finance exposure give him a strong foundation for early analyst success. 
+      With improved reliability and technical reps, he can grow into a steady, composed presence who strengthens 
+      both process and culture on a deal team.
     </p>
   </section>
 
 </div>
+
