--- a/dylan-tung.html
+++ b/dylan-tung.html
@@ -48,7 +48,7 @@
     min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.15); /* FIXED */
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -222,7 +222,7 @@
       Dylan brings one of the most unique profiles in the Diamond League class — a non-traditional major in Viticulture &amp;
       Enology, a 3.8 GPA, and a national-level polo résumé layered on top of entrepreneurial and investing experience.
       His Chip on Your Shoulder wiring shows up clearly: he has consistently played up against better-resourced opponents
-      and entered recruiting later and from a non-traditional path, using those headwinds as fuel to close the gap.
+      and entered recruiting later and from a non-traditional path, using those headwinds as motivation to close the gap.
       <br><br>
       Between investment analyst work at Next Haven Group, revenue-generating e-commerce and content plays, and hands-on
       operations experience in vineyards and polo programs, Dylan understands both sides of the table — how businesses
@@ -238,7 +238,7 @@
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
       <li><strong>Chip-on-your-shoulder mindset:</strong> Uses later start in IB recruiting and resource gaps in polo as motivation to outwork peers and close the gap.</li>
-      <li><strong>Strong academic foundation:</strong> 3.8 GPA in a rigorous science-oriented major plus quantitative coursework in econ, chemistry, and statistics.</li>
+      <li><strong>Strong academic foundation:</strong> 3.8 GPA in a rigorous science-oriented major plus quantitative coursework in economics, chemistry, and statistics.</li>
       <li><strong>Real investing exposure:</strong> Investment analyst intern experience sourcing deals, analyzing markets, and evaluating niche B2B services.</li>
       <li><strong>Entrepreneurial track record:</strong> Built and monetized e-commerce and social media accounts, generating $65,000+ in GMV and scaling audiences to 30,000+ followers.</li>
       <li><strong>High-performance athletics:</strong> Semi-professional polo background and Cornell D-I polo experience demonstrate discipline, composure, and decision-making under pressure.</li>
@@ -272,3 +272,4 @@
   </section>
 
 </div>
+
