--- a/lauren-yu.html
+++ b/lauren-yu.html
@@ -173,7 +173,7 @@
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">LAUREN YU</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Behind the Scenes Archetype · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Two-Way Player Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">UNC Chapel Hill · Fencing 🤺 · Class of 2028</p>
     </div>
 
@@ -181,7 +181,7 @@
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">9.5</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">Elite résumé + consistent execution; top performer all season</div>
+      <div class="grade-note">Elite résumé · consistent execution · strong interpersonal upside</div>
     </div>
   </section>
 
@@ -206,10 +206,10 @@
       <ul class="meta-list">
         <li><span class="meta-key">Fall Rank</span><span class="meta-value">5 / 63</span></li>
         <li><span class="meta-key">GPA</span><span class="meta-value">3.9</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">1. Behind the Scenes</span></li>
+        <li><span class="meta-key">Personality</span><span class="meta-value">14. Two-Way Player</span></li>
         <li><span class="meta-key">Performance</span>
           <span class="meta-value">
-            Top performer · flawless consistency · always early · one of the most accomplished Fellows
+            Early submissions · top performer · strong empathy + cross-personality adaptability
           </span>
         </li>
       </ul>
@@ -222,20 +222,20 @@
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Lauren is one of the most accomplished and consistent Fellows in the entire Diamond League class — a 
-      high-performance operator with elite academic, athletic, and professional credentials. A 3.90 GPA at UNC 
-      Kenan-Flagler paired with Division I Fencing competitiveness reflects both intellectual sharpness and 
-      relentless discipline. Her résumé stands out as one of the deepest in the cohort, with meaningful experience 
-      across M&A, investment analysis, and data-driven research.
+      Lauren is one of the most consistently elite Fellows in the Diamond League — a high-achieving 
+      academic performer, nationally recognized Division I fencer, and one of the most polished interpersonal 
+      profiles in the entire class. While her résumé is already among the strongest, what truly separates her is 
+      her **Two-Way Player capacity**: she is equally comfortable driving high-level analytical work and building 
+      strong rapport with any personality type.
       <br><br>
-      Her defining trait: **consistency**. Lauren submits work early, maintains meticulous detail across every 
-      assignment, and shows zero lapses in accountability or execution. She embodies the Behind the Scenes archetype 
-      with a high-performance edge — structured, prepared, reliable, and quietly effective.
+      People naturally open up to her. She leads with warmth, humor, and empathy — which has made her an anchor 
+      on the UNC fencing team, across nonprofits, and now within MAP’s case environments. Her ability to connect 
+      with strangers, teammates, and executives alike is rare for a first-year business candidate, and it elevates 
+      the cohesion and morale of every team she touches.
       <br><br>
-      Across MAP, she has looked like a prototypical Round 1–2 candidate: sharp, reliable, technically capable, 
-      and deeply polished. Her fencing background — national ranking, NCAA performance, ACC championships, and 
-      All-American honors — gives her a unique mental toughness and competitive maturity that translates directly 
-      into professional excellence.
+      Combine that with flawless consistency (always early, zero lapses), a 3.9 GPA, and competitive experience in 
+      one of the toughest athletic and academic environments in the ACC, and Lauren projects as a premium 
+      Round 1–2 candidate with both technical readiness and outstanding emotional intelligence.
     </p>
   </section>
 
@@ -245,13 +245,13 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite consistency:</strong> Submits early, no lapses; delivers high-quality work every single week.</li>
-      <li><strong>Exceptional résumé depth:</strong> UNC M&A Group, investment research, valuation experience, Citi D1 program.</li>
-      <li><strong>Academic excellence:</strong> 3.90 GPA in Business Administration + Statistics & Analytics minor.</li>
-      <li><strong>High-level athletic pedigree:</strong> Division I fencer · NCAA competitor · nationally ranked · All-American.</li>
-      <li><strong>Technical skill stack:</strong> DCF, comps, precedent transactions, Python/R/Tableau, Figma, Adobe Suite.</li>
-      <li><strong>Leadership maturity:</strong> Mentor in Carolina Leadership Academy; leads workshops and supports first-year athletes.</li>
-      <li><strong>Creative + analytical duality:</strong> Award-winning artist + strong data modeling background.</li>
+      <li><strong>Two-Way interpersonal excellence:</strong> People naturally trust her; blends empathy, clarity, and humor.</li>
+      <li><strong>Elite consistency:</strong> Submits early, high-quality work every week, no dips across the season.</li>
+      <li><strong>Résumé strength:</strong> Deep analytical experience in UNC M&A Group, investment analysis, and valuation roles.</li>
+      <li><strong>Academic firepower:</strong> 3.9 GPA in Kenan-Flagler Business School + Stats & Analytics minor.</li>
+      <li><strong>High-level athletic pedigree:</strong> NCAA competitor, nationally ranked, All-American honors in fencing.</li>
+      <li><strong>Cultural leader:</strong> Elevates team cohesion; strong mentor and reliable presence in group environments.</li>
+      <li><strong>Creative edge:</strong> Award-winning artist + strong technical toolkit (Tableau, R, MATLAB, Adobe Suite).</li>
     </ul>
   </section>
 
@@ -261,9 +261,9 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Could embrace more vocal leadership in team settings to match her high performance level.</li>
-      <li>Continue sharpening time-bound behavioral answers to fully showcase breadth of experience.</li>
-      <li>May benefit from taking on more front-facing or high-visibility roles within MAP or UNC organizations.</li>
+      <li>As she grows, can lean into more vocal leadership in group settings.</li>
+      <li>Continue sharpening timed behavioral responses to fully showcase her multidimensional background.</li>
+      <li>Next step is stepping confidently into front-of-room roles — presentations, client-style communication, etc.</li>
     </ul>
   </section>
 
@@ -273,11 +273,10 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A premium Round 1–2 MAP prospect with elite consistency, technical readiness, and a résumé 
-      already aligned with top investment banking and private equity pipelines. Lauren is a plug-and-play 
-      analyst with the preparation, discipline, and professional maturity to thrive from day one. Her blend 
-      of athletic competitiveness, academic strength, and leadership experience positions her as one of the 
-      most complete Fellows in this Diamond League class.
+      A premier Round 1–2 MAP prospect whose consistency, technical readiness, and exceptional interpersonal 
+      intelligence make her one of the most complete candidates in the class. Lauren is a plug-and-play analyst 
+      with the emotional range, discipline, and business preparation to succeed immediately in competitive 
+      2027 front-office pipelines.
     </p>
   </section>
 
